# segmentation_generic

./: .gitignore  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  tox.ini
.github/workflows/: lint.yaml  tests.yaml
scripts/: lint.sh
scripts/run/mask2former/: train_batchsize_lr.sh
scripts/run/medsam/: train_batchsize_lr_0.sh  train_batchsize_lr_1.sh  train_batchsize_lr_2.sh  train_batchsize_lr_3.sh
scripts/run/medsam/miccai_experiments/: infer.sh  running_the_example.sh  train1-2.sh  train3-4.sh  train5-6.sh  train7-10.sh  train_frac10.sh  train_frac100.sh  train_frac20.sh  train_frac30.sh  train_frac40.sh  train_frac50.sh  train_frac60.sh  train_frac70.sh  train_frac80.sh  train_frac90.sh
src/classification/simplenet/data_modules/: dm_cifar.py
src/classification/simplenet/loggers/: loggers_image_prediction.py
src/classification/simplenet/models/: models_simplenet.py
src/classification/simplenet/run/: run_train.py
src/classification/simplenet/utils/: utils_train.py
src/segmentation/generic/augmentations/: augmentations_train_val.py
src/segmentation/generic/data_modules/: datasets_generic.py
src/segmentation/generic/models/: models_generic.py
src/segmentation/generic/run/: run_infer.py  run_train.py
src/segmentation/generic/utils/: attribute_dict.py  utils_infer.py  (+2 more)
tests/segmentation/mask2former/: test_example.py
yamls/augmentations/mask2former/: high_augs.yaml  low_augs.yaml  medium_augs.yaml
yamls/augmentations/medsam/: high_augs.yaml  low_augs.yaml  medium_augs.yaml
yamls/system/: lt2.yaml  my_system.yaml
(+33 files in other folders)
