[metadata]
name = segmentation-generic
version = 0.0.1
author = Scott Kinder
author_email = scott.kinder@cuanschutz.edu
description = Segmentation on images
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/QTIM/cervical_diagnosis
classifiers =
   Programming Language :: Python :: 3
   License :: OSI Approved :: GNU Affero General Public License v3
   Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.9
install_requires =
   torch>=2.1.0
   torchvision>=0.18.0  
   torchaudio>=2.1.0
   numpy>=1.26.4
   pandas>=2.2.2
   matplotlib>=3.8.4
   Pillow>=10.3.0
   opencv-python>=4.9.0
   transformers>=4.11.3
   albumentations>=1.4.4
   seaborn>=0.13.2
   pytorch-lightning>=2.2.4
   wandb>=0.17.0
zip_safe = False

[options.extras_require]
testing =
   flake8>=7.0.0
   tox>=4.15.0
   pytest>=8.2.0
   pytest-cov>=5.0.0
   mypy>=1.10.0

[options.package_data]
; classification = py.typed
; classification/diagnostic = py.typed
; classification/image_quality = py.typed
; detection = py.typed
; pipeline = py.typed
segmentation = py.typed
segmentation/mask2former = py.typed

[flake8]
max-line-length = 160